--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
         }
     ],
     "require": {
-        "behat/behat": ">=2.4",
+        "behat/behat": "~2.4",
         "php": ">=5.4.0",
-        "symfony/process": ">=2.3",
-        "symfony/event-dispatcher": ">=2.3"
+        "symfony/process": "~2.3",
+        "symfony/event-dispatcher": "~2.3"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.0"
@@ -27,7 +27,8 @@
     },
     "autoload": {
         "psr-0": {
-            "BehatManager": "src/"
+            "BehatManager": "src/",
+            "BehatWrapper": "src/"
         }
     }
 }
